--- a/0-/IRC Meeting.mediawiki
+++ b/0-/IRC Meeting.mediawiki
@@ -10,7 +10,7 @@ Since the 20th of November 2006, the XMMS2 team has conducted fairly regular mee
 ;Archive: [[IRC Meeting/Archive]]
 
 === Pre-meeting ===
-# Organizer creates a preliminary agenda for next meeting and posts it to [[IRC Meeting/YYYY-MM-DD/Agenda]] and updates the [[IRC Meeting/Agenda]] redirect. The organizer doesn't know everything that is going on in the XMMS2 world, so it is up to the participants to edit the agenda!
+# Organizer creates a preliminary agenda for next meeting and posts it to [[IRC Meeting/YYYY-MM-DD/Agenda]] and updates the [[IRC Meeting/Agenda]] redirect. The organizer doesn't know everything that is going on in the XMMS2 world, so '''it is up to the participants to edit the agenda'''!
 # Organizer announces the next meeting on the [http://lists.xmms.se/cgi-bin/mailman/listinfo/xmms2-devel mailing list], most preferably 4 days before the meeting, at the latest. A reminder email is sent 1-2 days before the meeting.
 # Participants prepare [[#Status announcements|status announcements]], a formalized list of issues they want to address. Meeting participants often have to come and go due to real life issues, so issues will be prioritized accordingly by the meeting organizer; issues on the [[IRC Meeting/Adenda|agenda]] page usually take priority.
 
