--- a/0-/IRC Meeting.mediawiki
+++ b/0-/IRC Meeting.mediawiki
@@ -15,11 +15,12 @@ Since the 20th of November 2006, the XMMS2 team has conducted fairly regular mee
 # Participants prepare [[#Status announcements|status announcements]], a formalized list of issues they want to address. Meeting participants often have to come and go due to real life issues, so issues will be prioritized accordingly by the meeting organizer; issues on the [[IRC Meeting/Adenda|agenda]] page usually take priority.
 
 === Meeting ===
-# Participants join channel and wait for organiser to announce the start of the meeting.
-# Organiser asks each participant to announce their [[#Status_announcements | status]].
-# Organiser provides a topic that participants may discuss.
-# Organiser declares the issue resolved after consensus has been reached, too much time has been taken and the issue must be deferred, or the discussion should be moved to another medium, such as the mailing list.
-;Object-Oriented Summary:
+# Participants join channel and wait for organizer to announce the start of the meeting. This is a good time to tell the organizer if you have to leave early or if a topic had late, breaking developments, or should take priority. This will help the organizer prioritize the meeting so that the most important points are hit while certain people are present.
+# Organizer asks each participant to announce their [[#Status_announcements | status]].
+# Organizer provides a topic that participants may discuss.
+# Organizer declares the issue resolved after consensus has been reached, too much time has been taken and the issue must be deferred, or the discussion should be moved to another medium, such as the mailing list.
+
+;Object-Oriented (Ruby) Summary:
  organiser = Organiser.new('Dan Chokola')
  organiser.puts('Meeting started!')
  participants.each do |p|
