Levitation import of page 2448 rev 8232.

--- a/0-/GSoC:2008/Collections 2.0.mediawiki
+++ b/0-/GSoC:2008/Collections 2.0.mediawiki
@@ -1,8 +1,8 @@
 {{GSoCProject
 |student=''enter student name here''
 |mentor=''enter mentor name here''
-|cmilestone=''add link to latest accopmlished milestone here''
-|nmilestone=''add link to next milestone here''
+|cmilestone=[[Summer of Code 2008/Collections 2.0/Milestones#Student_accepted|Student accepted]]
+|nmilestone=[[Summer of Code 2008/Collections 2.0/Milestones#TBD|TBD]]
 |description=
 ''add description here''
 
