Levitation import of page 2447 rev 8239.

--- a/0-/IRC Meeting/2008-04-27/Agenda.mediawiki
+++ b/0-/IRC Meeting/2008-04-27/Agenda.mediawiki
@@ -5,3 +5,4 @@
 ** Should collections only use the preferred sources for querying. If so, what happens when multiple sources have the same priority?
 ** If the previous question is answered positively: should source-preference be connection specific, or globally in the server.
 ** Should collections maybe consider all sources in the querying, but have the possibility to only return the top-most sources to the user?
+** See also [[Summer of Code 2008/Collections 2.0/Source-preference]]
