--- a/0-/Client:Promoe.mediawiki
+++ b/0-/Client:Promoe.mediawiki
@@ -1,2 +1,2 @@
-{{Client |name=Promoe| author=Tobias RundstrÃ¶m, Daniel Svensson| website=http://git.xmms.se| version=| devlanguage=C++| ui=Qt4| screenshots=http://exodus.xmms.se/~nano/promoe.png| description=
+{{Client |name=Promoe| author=Thomas Frauendorfer, Tobias RundstrÃ¶m, Daniel Svensson| website=http://git.xmms.se| version=| devlanguage=C++| ui=Qt4| screenshots=http://exodus.xmms.se/~nano/promoe.png| description=
 Winamp classic clone.}}
