--- a/0-/Client:Promoe.mediawiki
+++ b/0-/Client:Promoe.mediawiki
@@ -1,2 +1,20 @@
 {{Client |name=Promoe| author=Thomas Frauendorfer, Tobias RundstrÃ¶m, Daniel Svensson| website=http://git.xmms.se| version=| devlanguage=C++| ui=Qt4| screenshots=http://exodus.xmms.se/~nano/promoe.png| description=
-Winamp classic clone.}}
+== Intro ==
+Winamp classic clone.
+
+== Install and build ==
+
+=== Source ===
+
+There has not yet been an official release, but the source can be found at the [http://git.xmms.se/ XMMS2 git tree]. You can get the latest snapshot [http://git.xmms.se/snapshot.cgi/promoe.git-snapshot-HEAD.tar.bz2 here]
+
+=== Dependencies ===
+
+* XMMS2
+** XMMS2 C++ bindings, which needs boost.
+* Qt 4.2 or newer
+
+== Bugtracker ==
+
+Report bugs and request features in the [http://bugs.xmms2.xmms.se/ XMMS2 bugtracker]. Please file bugs under project "Client - Promoe"
+}}
