/* After DR Phase */
Levitation import of page 1228 rev 8253.

--- a/0-/Versioning.mediawiki
+++ b/0-/Versioning.mediawiki
@@ -40,6 +40,9 @@ Korv names?
 * hiilos
 * malakoff
 * weiÃŸwurst
+* knakworst
+* rookworst
+* bockwurst
 
 See also: http://en.wikipedia.org/wiki/Category:Sausages
 
