--- a/0-/Download XMMS2.mediawiki
+++ b/0-/Download XMMS2.mediawiki
@@ -48,7 +48,7 @@ Ebuilds for latest testing versions (incl. latest git) are available at http://x
 
 These ebuilds have more USE flags for the optional packages that xmms2 can depend on but does not strictly require in order to compile. As of the 0.2 DrAlban ebuild,  a new local "phonehome" USE flag that has to be set in order to enable the [[ET|xmms2-et]] client that phones home to the developers. (xmms2-et is enabled by default in DrAlban everywhere else)
 
-Some alternate ebuilds are available here: [http://www.zugaina.org/gentoo/media-sound.html.en Ycarus ebuilds]
+Some alternate ebuilds are available here: [http://www.zugaina.org/gentoo/media-sound.html.en Ycarus ebuilds] and [http://proaudio.tuxfamily.org proaudio overlay].
 
 There are plans to add xmms2 to Gentoo in the near future. You can track the progress at http://bugs.gentoo.org/show_bug.cgi?id=93583.
 Latest proposed [http://bugs.gentoo.org/attachment.cgi?id=98304 ebuild].
