removed screenshot, Mlib doesn't work at the moment, so I should create a new one
Levitation import of page 1323 rev 8259.

--- a/0-/Client:Promoe.mediawiki
+++ b/0-/Client:Promoe.mediawiki
@@ -1,4 +1,4 @@
-{{Client |name=Promoe| author=Thomas Frauendorfer, Tobias RundstrÃ¶m, Daniel Svensson| website=http://git.xmms.se| version=| devlanguage=C++| ui=Qt4| screenshots=http://exodus.xmms.se/~nano/promoe.png| description=
+{{Client |name=Promoe| author=Thomas Frauendorfer, Tobias RundstrÃ¶m, Daniel Svensson| website=http://git.xmms.se| version=| devlanguage=C++| ui=Qt4| screenshots=| description=
 == Intro ==
 Winamp classic clone.
 
