Levitation import of page 2459 rev 8268 (minor).

--- a/0-/IRC Meeting/2008-05-18/Agenda.mediawiki
+++ b/0-/IRC Meeting/2008-05-18/Agenda.mediawiki
@@ -1,5 +1,5 @@
 * Merge issues
-** recap code review process outlined on this thread (anders)
+** recap code review process outlined on [http://www.mail-archive.com/xmms2-devel@lists.xmms.se/msg00938.html this thread] (anders)
 ** release timing (anders)
 * DrLecter
 ** release critical bugs (nano)
