--- a/0-/Clientlist.mediawiki
+++ b/0-/Clientlist.mediawiki
@@ -55,7 +55,6 @@ All current clients should be found here.
 {{ClientTableEntry|xmms2-pidgin| Pidgin Plugin | C | mostly stable | Pidgin plugin to display current song }}
 {{ClientTableEntry|xmms2_jump| Quick Search (GTK/curses) | C++ | in development | Let's you search your playlist in real time. }}
 {{ClientTableEntry|XMMS2-Scrobbler| AudioScrobbler | Ruby | in development | Submits playing data to AudioScrobbler/Last.FM }}
-{{ClientTableEntry|xmms2Plugin| Plugin for irssi | C++ | in development | Control and query xmms2 within irssi }}
 {{ClientTableEntry|XMMS2 Webterface| Browser / Webclient | Ruby | in development | eRuby templated, skinnable, simple web 1.0 client}}
 |}
 
@@ -70,6 +69,7 @@ Please move the following clients according to their actual state!
 {{ClientTableEntry|xmms2_blue| Mobile Phone / Bluetooth | C | probably abandoned | Player working with SonyEriccson mobile phone }}
 {{ClientTableEntry|XMMS2-AMP| Graphical / Skinnable | ? | vaporware | Resembles good ol' XMMS }}
 {{ClientTableEntry|xmms2joystick| Joystick | C | website unreachable | Control XMMS2 with a joystick device }}
+{{ClientTableEntry|xmms2Plugin| Plugin for irssi | C++ | website unreachable | Control and query xmms2 within irssi }}
 |}
 
 = Abandoned/Deprecated Clients =
