--- a/0-/Client:exmms2.mediawiki
+++ b/0-/Client:exmms2.mediawiki
@@ -1,11 +1,14 @@
 Hi,thanks for checking out exmms2:
 
+Exmms2 is an XMMS2 client using the EWL and EFL (enlightened widget library & enlightenment foundation libraries)
+
 In it's early stages now, exmms2 aims to be a fully featured xmms2 client. Currently at the bare minimum of functionality it can move back and forth in the playlist, play, stop, and display's the current track information. More development is planned now, and a playlist interface is going to be written next. After that I plan to add a seeker/slider for track position, will enable pausing functionality, a volume knob, then I will begin working on the interface for the equalizer. Patches are welcome. Lots of exciting features are planned.
 
 If you'd like to try it out, then check out the source from code.google.com with:<br />
 svn checkout http://exmms2.googlecode.com/svn/trunk/ exmms2-read-only
  
-
+To compile, you will need the latest xmms2 with all development libraries as well as
+all the EFL development libraries (EWL, Ecore, Evas)
 
 email tom@NOSPAM@dignan@gmail@NOSPAM@com if you have any questions.
 
